<resources>
    <string name="app_name">Aller plus loin avec Kotlin</string>
    <plurals name="layoutOeuf">
        <item quantity="one">%d egg</item>
        <item quantity="other">%d eggs</item>
    </plurals>
    <string name="layoutFarine">%1$dg of flour</string>
    <string name="layoutTitre">crepe paste recipe : %1$d crepes</string>
    <string name="layoutPlus" translatable="false">+</string>
    <string name="layoutMoins" translatable="false">-</string>
    <string name="fragmentGreylightText">Fragment GreyLight</string>
    <string name="title_activity_secod">SecondActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="fragment">fragment</string>
    <string name="recette">Recipe</string>
    <string name="greyDark">Fragment greyDark</string>
    <string name="click_here">Click here</string>
    <string name="framelayout">frameLayout</string>
    <string name="call_phone">call phone</string>
    <string name="progressbar">ProgressBar</string>
    <string name="go">GO</string>
    <string name="chargement_des_donn_es_en_cours">Chargement des données en cours...</string>
    <string name="chargement_des_donn_es">Chargement des données</string>
    <string name="swiperefresh">SwipeRefresh</string>
    <string name="rafraichir">Rafraichir</string>
    <string name="quel_est_un_des_meilleurs_langages_de_programmtion">Quel est un des meilleurs langages de programmtion?</string>
    <string name="webview">WebView</string>
    <string name="http">HTTP</string>
    <string name="http_json">HTTP Json</string>
    <string name="user_database">User database</string>
    <string name="start">Start</string>
    <string name="count">Count</string>
</resources>