<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!" />

    <Button
        android:id="@+id/startRecette"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recette" />

    <Button
        android:id="@+id/startFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment" />

    <Button
        android:id="@+id/startFrameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/framelayout" />

    <Button
        android:id="@+id/callPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call_phone" />
</LinearLayout>