<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!" />

    <TextView
        android:id="@+id/textViewTitre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/layoutTitre" />

    <TextView
        android:id="@+id/textViewFarine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/layoutFarine" />

    <TextView
        android:id="@+id/textViewOeuf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@plurals/layoutOeuf" />

    <Button
        android:id="@+id/boutonPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layoutPlus" />

    <Button
        android:id="@+id/boutonMoins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layoutMoins" />
</LinearLayout>